--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 CANONICAL_HOST=https://design.rhcargo.ru
+MAX_UPLOAD_MB=10
+ALLOWED_IMAGE_MIME=image/jpeg,image/png,image/webp,image/gif
+SIGNED_URL_TTL_SEC=300
