--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ CANONICAL_HOST=https://design.rhcargo.ru
 MAX_UPLOAD_MB=10
 ALLOWED_IMAGE_MIME=image/jpeg,image/png,image/webp,image/gif
 SIGNED_URL_TTL_SEC=300
+STREAM_HEARTBEAT_SEC=15
