feat: S-08 — Action connector for reserve, contribute, activity

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ MAX_UPLOAD_MB=10
 ALLOWED_IMAGE_MIME=image/jpeg,image/png,image/webp,image/gif
 SIGNED_URL_TTL_SEC=300
 STREAM_HEARTBEAT_SEC=15
+RATE_LIMIT_ACTIONS_PER_MIN=20
+IDEMPOTENCY_TTL_SEC=180
