feat: S-09 — Secrets lifecycle and share-link rotation

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ SIGNED_URL_TTL_SEC=300
 STREAM_HEARTBEAT_SEC=15
 RATE_LIMIT_ACTIONS_PER_MIN=20
 IDEMPOTENCY_TTL_SEC=180
+SHARE_TOKEN_BYTES=24
+SHARE_TOKEN_PEPPER=
