feat: S-10 — Observability, abuse controls, and support docs

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ RATE_LIMIT_ACTIONS_PER_MIN=20
 IDEMPOTENCY_TTL_SEC=180
 SHARE_TOKEN_BYTES=24
 SHARE_TOKEN_PEPPER=
+ADMIN_EMAILS=
+AUDIT_RETENTION_DAYS=180
+LOG_REDACTION_MODE=strict
+STREAM_RECONNECT_WINDOW_SEC=120
