--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_STORAGE_BUCKET=item-images
 CANONICAL_HOST=https://design.rhcargo.ru
 MAX_UPLOAD_MB=10
 ALLOWED_IMAGE_MIME=image/jpeg,image/png,image/webp,image/gif
