--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
     "next": "15.5.12",
     "react": "18.3.1",
     "react-dom": "18.3.1"
