--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ SUPABASE_STORAGE_BUCKET=item-images
 CANONICAL_HOST=https://design.rhcargo.ru
 MAX_UPLOAD_MB=10
 ALLOWED_IMAGE_MIME=image/jpeg,image/png,image/webp,image/gif
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_TIMEOUT_MS=9000
+METADATA_TIMEOUT_MS=5000
 SIGNED_URL_TTL_SEC=300
 STREAM_HEARTBEAT_SEC=15
 RATE_LIMIT_ACTIONS_PER_MIN=20
